--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <div class="formDiv">
 <form id="myform">
   <label for="uname">Username:</label>
-  <input type="text" id="uname" placeholder="Enter email" tabindex="-1"><br><br>
+  <input type="text" id="uname" placeholder="Enter email" ><br><br>
   <label for="pwd">Password:</label>
-  <input type="password" id="pwd" placeholder="Password" tabindex="-1"><br><br>
+  <input type="password" id="pwd" placeholder="Password" ><br><br>
   <input id="btn" class="btn" type="button" onclick="success()" onmouseover="myFunction()" value="Submit" tabindex="-1">
 </form>
 </div>
