--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!doctype html>
 <html>
 <head>
-  <title>
-   DevPhilip
-  </title>
+  <title>Login | DevPhilip</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="styles.css">
-  <script src="myscript.js"></script>
+  <link rel="stylesheet" href="my_only_stylesheet.css">
+  <script src="my_only_jscript.js"></script>
 </head>
 
 <body align="center">
